--- a/DentalClinic.UI/package.json
+++ b/DentalClinic.UI/package.json
@@ -23,6 +23,7 @@
     "@angular/ssr": "^17.3.7",
     "express": "^4.18.2",
     "jwt-decode": "^4.0.0",
+    "ngx-mask": "^17.0.8",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
